sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:19: error: '(' expected but '{' found.
  } while {cpt=1}
          ^